--- a/css/style.css
+++ b/css/style.css
@@ -127,4 +127,10 @@ hr {
         width: 100%;
         margin-bottom: 25px;
     }
+    .contener {
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+    }
 }
